--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,14 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="68dp"
         android:fontFamily="@font/alfa_slab_one"
         android:text="CarDiaries"
         android:textAlignment="center"
         android:textColor="#010B0C"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,10 +78,22 @@
         android:layout_width="316dp"
         android:layout_height="46dp"
         android:layout_marginTop="50dp"
+        android:onClick="onRegisterClick"
         android:text="@string/register"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
-
+    <Button
+        android:id="@+id/go_to_login_button"
+        android:layout_width="316dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="76dp"
+        android:onClick="onGoToLoginClick"
+        android:text="Have an account? Log in here!"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
