--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,10 +7,23 @@
     tools:context=".Login">
 
     <Button
+        android:id="@+id/create_account"
+        android:layout_width="316dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="50dp"
+        android:onClick="onCreateAccount"
+        android:text="Create account"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_button" />
+
+    <Button
         android:id="@+id/login_button"
         android:layout_width="316dp"
         android:layout_height="46dp"
         android:layout_marginTop="50dp"
+        android:onClick="onLoginClick"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
