--- a/app/src/main/res/layout/cardiaries_data_activity.xml
+++ b/app/src/main/res/layout/cardiaries_data_activity.xml
@@ -4,15 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#C7E1C8">
+
 
     <EditText
         android:id="@+id/car_title"
-        android:layout_width="155dp"
-        android:layout_height="31dp"
+        android:layout_width="158dp"
+        android:layout_height="53dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="132dp"
-        android:textSize="24sp"
+        android:fontFamily="@font/droid_sans_mono"
+        android:textColor="#020202"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.462"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +29,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/droid_sans_mono"
+        android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
@@ -39,6 +45,8 @@
         android:layout_marginBottom="45dp"
         android:onClick="onRightButton"
         android:text="save post"
+        android:textColor="#020000"
+        app:backgroundTint="#FAFDF9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -50,7 +58,8 @@
         android:layout_marginBottom="45dp"
         android:onClick="onLeftButton"
         android:text="cancle"
+        android:textColor="#020000"
+        app:backgroundTint="#FAFDF9"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.017"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
