--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backg_login"
     tools:context=".Login">
 
     <Button
@@ -11,6 +12,7 @@
         android:layout_width="316dp"
         android:layout_height="46dp"
         android:layout_marginTop="50dp"
+        android:backgroundTint="#46CCC4C4"
         android:onClick="onCreateAccount"
         android:text="Create account"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,9 +22,10 @@
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="316dp"
-        android:layout_height="46dp"
+        android:layout_width="305dp"
+        android:layout_height="44dp"
         android:layout_marginTop="50dp"
+        android:backgroundTint="#46CCC4C4"
         android:onClick="onLoginClick"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +42,9 @@
         android:layout_marginEnd="20dp"
         android:hint="Enter password"
         android:inputType="textPassword"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#CCC4C4"
+        android:textColorLink="#CCC4C4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +58,10 @@
         android:layout_marginTop="90dp"
         android:layout_marginEnd="20dp"
         android:hint="Enter username"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#CCC4C4"
+        android:textColorLink="#CCC4C4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +75,7 @@
         android:fontFamily="@font/alfa_slab_one"
         android:text="CarDiaries"
         android:textAlignment="center"
-        android:textColor="#010B0C"
+        android:textColor="#FFFFFF"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
