--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backg_reg"
     tools:context=".MainActivity">
 
     <TextView
@@ -14,7 +15,7 @@
         android:fontFamily="@font/alfa_slab_one"
         android:text="CarDiaries"
         android:textAlignment="center"
-        android:textColor="#010B0C"
+        android:textColor="#FFFFFF"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -29,6 +30,9 @@
         android:layout_marginTop="90dp"
         android:layout_marginEnd="20dp"
         android:hint="Enter email"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#CCC4C4"
+        android:textColorLink="#CCC4C4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +45,7 @@
         android:layout_marginTop="14dp"
         android:fontFamily="@font/asap"
         android:text="Register now!"
-        android:textColor="#070000"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -54,6 +58,9 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:hint="Enter username"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#CCC4C4"
+        android:textColorLink="#CCC4C4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,6 +75,9 @@
         android:layout_marginEnd="20dp"
         android:hint="Enter password"
         android:inputType="textPassword"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#CCC4C4"
+        android:textColorLink="#CCC4C4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +88,7 @@
         android:layout_width="316dp"
         android:layout_height="46dp"
         android:layout_marginTop="50dp"
+        android:backgroundTint="#46CCC4C4"
         android:onClick="onRegisterClick"
         android:text="@string/register"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,6 +101,7 @@
         android:layout_width="316dp"
         android:layout_height="46dp"
         android:layout_marginTop="44dp"
+        android:backgroundTint="#46CCC4C4"
         android:onClick="onGoToLoginClick"
         android:text="Have an account? Log in here!"
         app:layout_constraintEnd_toEndOf="parent"
