--- a/app/src/main/res/menu/botton_nav_menu.xml
+++ b/app/src/main/res/menu/botton_nav_menu.xml
@@ -3,13 +3,16 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_baseline_home_24"
+        android:iconTint="#000000"
         android:title="Home" />
     <item
         android:id="@+id/nav_dashboard"
-        android:icon="@drawable/ic_baseline_dashboard_24"
-        android:title="Dashboard" />
+        android:icon="@drawable/ic_baseline_map_24"
+        android:iconTint="#000000"
+        android:title="Map" />
     <item
         android:id="@+id/nav_person"
         android:icon="@drawable/ic_baseline_person_24"
+        android:iconTint="#000000"
         android:title="Person" />
 </menu>
