--- a/app/src/main/res/layout/post_list_item.xml
+++ b/app/src/main/res/layout/post_list_item.xml
@@ -10,9 +10,12 @@
         android:id="@+id/car_title_in_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#81514E4E"
         android:fontFamily="@font/droid_sans_mono"
         android:text="TextView"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FFEB3B"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -24,11 +27,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:backgroundTint="#81514E4E"
         android:fontFamily="@font/droid_sans_mono"
         android:text="TextView"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FFEB3B"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.128"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/car_title_in_list" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="340dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="16dp"
+        android:text="_______________________________________________"
+        android:textAlignment="center"
+        android:textColor="#D5CFCF"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description_in_list" />
 </androidx.constraintlayout.widget.ConstraintLayout>
