--- a/app/src/main/res/layout/cardiaries_data_activity.xml
+++ b/app/src/main/res/layout/cardiaries_data_activity.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C7E1C8">
+    android:background="@drawable/back_car">
 
 
     <EditText
@@ -15,7 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="132dp"
         android:fontFamily="@font/droid_sans_mono"
-        android:textColor="#020202"
+        android:textColor="#FFFFFF"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.436"
@@ -30,7 +29,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/droid_sans_mono"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
