--- a/app/src/main/res/layout/cardiaries_data_activity.xml
+++ b/app/src/main/res/layout/cardiaries_data_activity.xml
@@ -15,6 +15,9 @@
         android:layout_marginTop="132dp"
         android:fontFamily="@font/droid_sans_mono"
         android:textColor="#FFFFFF"
+        android:textColorHighlight="#F3F1F1"
+        android:textColorHint="#F8ECEC"
+        android:textColorLink="#DFD5D5"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.436"
@@ -30,6 +33,9 @@
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/droid_sans_mono"
         android:textColor="#FFFFFF"
+        android:textColorHighlight="#F1E9E9"
+        android:textColorHint="#F1E5E5"
+        android:textColorLink="#EADDDD"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
