--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -10,13 +10,13 @@
         android:id="@+id/log_out_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
         android:layout_marginBottom="96dp"
         android:backgroundTint="#FFFFFF"
         android:text="Log out"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/profile_email"
@@ -25,7 +25,6 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="83dp"
         android:layout_marginEnd="299dp"
-        android:text="TextView"
         android:textSize="21sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +37,6 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="299dp"
-        android:text="TextView"
         android:textSize="21sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
@@ -53,7 +51,6 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="302dp"
         android:layout_marginBottom="465dp"
-        android:text="TextView"
         android:textSize="21sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +70,9 @@
         android:inputType="textPersonName"
         android:text="Name"
         android:textAlignment="center"
+        android:textColor="#647678"
+        android:textColorHighlight="#647678"
+        android:textColorHint="#647678"
         android:textSize="27sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,8 +97,10 @@
         android:layout_marginBottom="75dp"
         app:layout_constraintBottom_toTopOf="@+id/log_out_button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/profile2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
